Polishing.
Original Pull Request: #577